# ai-trading-agent

./: .env.example  .gitignore  BRD.md  LICENSE  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  kill_switch_card.py
db/init/: 01_create_databases.sql
db/migrations/: env.py
db/migrations/versions/: 0001_init.py
freqtrade/: README.md
orchestrator/: __init__.py  graph.py  main.py  state.py
orchestrator/agents/: __init__.py  critic.py  generator.py  researcher.py  risk_analyst.py
orchestrator/gates/: __init__.py  hitl.py  thresholds.py
orchestrator/observability/: __init__.py  events.py
orchestrator/security/: ast_validator.py
orchestrator/subgraphs/: __init__.py  research.py  validation.py
orchestrator/tools/: __init__.py  backtest_runner.py  freqtrade_api.py  lookahead.py  regime.py  store_queries.py
scripts/: README.md  seed_dashboard_data.py  smoke_critic.py  smoke_researcher.py  smoke_risk_analyst.py
strategy_templates/: freqai_classifier_template.py  freqai_classifier_template_README.md  freqai_classifier_template_schema.py  freqai_regressor_template.py  freqai_regressor_template_README.md  freqai_regressor_template_schema.py  mean_reversion_template.py  mean_reversion_template_README.md  mean_reversion_template_schema.py
tests/: conftest.py
tests/fixtures/: __init__.py  hitl.py
tests/integration/: test_dashboard_smoke.py  test_freqtrade_subprocess.py  test_graph_skeleton.py  test_hitl_fixtures.py  test_hitl_resume.py  test_main_endpoints.py  test_paper_gate_e2e.py  test_research_subgraph_e2e.py  test_validation_subgraph.py
tests/unit/: test_ast_validator.py  test_critic.py  test_critic_loop.py  test_events.py  test_generator.py  test_hitl.py  test_lookahead_gate.py  test_postgres_lifecycle.py  test_research_subgraph_skeleton.py  test_risk_analyst.py  test_robustness.py  test_send_fanout.py  test_smoke.py  test_template_filling.py  test_thresholds.py  test_validation_routing.py  test_walk_forward.py
